# mcp-streamlit-chatbot

./: .cursorrules  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  mcp_client.py
docker/: Dockerfile.app  Dockerfile.mcp  docker-compose.yml
mcp-server/: main.py
mcp-server/tools/: summarize_pdf.py
