[project]
name = "mcp-streamlit-chatbot"
version = "0.1.0"
description = "This project meant as a hands on practice of working with MCP in a streamlit chatbot that is meant to be deployed in AWs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "PyPDF2",
    "streamlit",
    "langchain",
    "langchain-core",
]
